[project]
name = "homepage"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "IansGithubAcc" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "mystmd >=1.3.28",
]

[project.urls]
Documentation = "https://iansgithubacc.github.io"
Issues = "https://github.com/IansGithubAcc/iansgithubacc.github.io/issues"
Source = "https://github.com/IansGithubAcc/iansgithubacc.github.io"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.coverage.run]
source_pkgs = ["homepage", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
homepage = ["src/homepage", "*/homepage/src/homepage"]
tests = ["tests", "*/homepage/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]